# Adafruit_CircuitPython_VCNL4030

./: LICENSE  README.rst  README.rst.license  adafruit_vcnl4030.py  pyproject.toml  ruff.toml
docs/: api.rst  api.rst.license  conf.py  examples.rst  index.rst
examples/: vcnl4030_fulltest.py  vcnl4030_interrupt_threshold.py  vcnl4030_simpletest.py
hw_tests/: 00_als_neopixel.py  01_proximity_servo.py  02_als_integration_time.py  03_als_sensitivity.py  04_ps_led_current.py  05_ps_gain.py  06_ps_resolution.py  07_ps_duty.py  08_ps_cancellation.py  09_interrupt_flags.py  10_active_force.py  11_sunlight_cancel.py  12_interrupt_pin.py
